--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landin Page</title>
+    <title>Landing Page</title>
 </head>
-<body>
+<head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+ <header>
+   <div>DHS</div> 
+   <div>
     
+    <nav>HOME</nav>
+    <nav>ABOUT</nav>
+    <nav>CONTACT</nav>
+    </div> 
+</header> 
+<body>
+<h1>THE HEAVENLY SARAPHINE</h1> 
+    <p>
+      The Heavenly Saraphine is a non-denominational evangelistic group that spreads the gospel through contemporary music. The group is based in Tema , Ghana and over the years has been the pioneer of contemporary gospel music in Tema House of Power Ministries International. The quest to save the lost and perishing souls in this generation and in our part of the world has been the heartbeat of this ministry. Over the years, many young people have given their lives to Christ, with many Christian groups and churches being revived during their outreach and evangelism programs. They have been in the gospel music industry for over ten years and counting.
+     </p>
+     
+<img src="https://thumbs.dreamstime.com/z/cosy-room-wooden-walls-music-intruments-around-vintage-style-room-interior-winter-holiday-cottage-vintage-cosy-186427699.jpg"
+alt="big ups to caught in joy">
+
+<button>
+    <div>sign up</div>
+</button>
+
 </body>
 </html>
