--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
   </head>
  <header>
    <div>DHS</div> 
-   <div>
-    
-    <nav>HOME</nav>
-    <nav>ABOUT</nav>
-    <nav>CONTACT</nav>
-    </div> 
+   <nav>
+    <nav class="HOME"></div>
+    <nav class="ABOUT"></div>
+    <nav class="CONTACT"></div>
+    </nav>
 </header> 
 <body>
 <h1>THE HEAVENLY SARAPHINE</h1> 
