--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
   </head>
  <header>
    <div>DHS</div> 
-   <nav>
-    <nav class="HOME"></div>
-    <nav class="ABOUT"></div>
-    <nav class="CONTACT"></div>
-    </nav>
+   <div class="navigation">
+    <nav class="home">HOME</nav>
+    <nav class="about">ABOUT</nav>
+    <nav class="contact">CONTACT</nav>
+</div>
 </header> 
 <body>
 <h1>THE HEAVENLY SARAPHINE</h1> 
     <p>
       The Heavenly Saraphine is a non-denominational evangelistic group that spreads the gospel through contemporary music. The group is based in Tema , Ghana and over the years has been the pioneer of contemporary gospel music in Tema House of Power Ministries International. The quest to save the lost and perishing souls in this generation and in our part of the world has been the heartbeat of this ministry. Over the years, many young people have given their lives to Christ, with many Christian groups and churches being revived during their outreach and evangelism programs. They have been in the gospel music industry for over ten years and counting.
      </p>
-     
+   <div class="image">
 <img src="https://thumbs.dreamstime.com/z/cosy-room-wooden-walls-music-intruments-around-vintage-style-room-interior-winter-holiday-cottage-vintage-cosy-186427699.jpg"
 alt="big ups to caught in joy">
+</div>
 
 <button>
     <div>sign up</div>
