--- a/index.html
+++ b/index.html
@@ -1,48 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
-<head>
-    <link rel="stylesheet" href="style.css">
-  </head>
- <header>🎼DHS</header>
-    <body>
-      <div class="container">
-        <div id="head-box">
-            <div id="header">
-                <div id="logo">
-                  </div>
-                <div id="links">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">logout</a></li>
-                    </ul>
-                </div>
-            </div>
-
-<h1>THE HEAVENLY SARAPHINE</h1> 
-</div>
-  <p>
-    The Heavenly Saraphine is a non-denominational evangelistic group that spreads the gospel through contemporary music.
-    The group is based in Tema , Ghana and over the years has been the pioneer of contemporary gospel music in Tema House of Power Ministries International.
-   <div>
-  <img class="image" decoding="async" width="650" height="550" data-pin-title="THE HEAVENLY SARAFINE" src="https://thumbs.dreamstime.com/z/cosy-room-wooden-walls-music-intruments-around-vintage-style-room-interior-winter-holiday-cottage-vintage-cosy-186427699.jpg"
-alt="big ups">
-</p>
-</div>
-                
-
-</div>
-<button>
-    <div>sign up</div>
-</button>
-</div>
+<body>
+  
 </body>
 </html>
