--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adonai group of companies</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Adonai group of companies</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <header>
+    <img
+      decoding="auto"
+      width="80"
+      height="80"
+      src="https://cdn.pixabay.com/photo/2013/07/13/12/15/chicken-159496_960_720.png"
+      alt="bigups to pixabay.com"
+    />
+    <ul>
+      <li>HOME</li>
+      <li>ABOUT</li>
+      <li>CONTACT</li>
+    </ul>
+  </header>
+
+  <body>
+    <h1>Wellcome To Adonai Poultry Farm</h1>
   
-</body>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  </body>
 </html>
