--- a/index.html
+++ b/index.html
@@ -23,30 +23,81 @@
   </header>
 
   <body>
-    <h1>Wellcome To Adonai Poultry Farm</h1>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+    <h1>Wellcome To Adonai Animal Farms</h1>
+    <p>
+      Adonai farm is a place where healthy and wholesome birds can be found.
+      Adonai Chicken is a wholesales distributing company with a large history
+      of selling fresh and frozen food like frozen chicken, beef, and pork. We
+      are one of the leading frozen meat exporters in the world. We comply with
+      all international export laws and offer top quality products with
+      outstanding services. Our prices are also very competitive.
+    </p>
+    <button>sign up</button>
+    <img
+      decoding="auto"
+      width="500"
+      height="500"
+      src="https://cdn.pixabay.com/photo/2019/04/21/23/24/chickens-4145198_960_720.jpg"
+      alt="pixabay.com"
+    />
+    <div>
+      <section>
+        frozen cuts category
+        <ul>
+          <li>
+            <img
+              decoding="auto"
+              width="150"
+              height="150"
+              src="https://cdn.pixabay.com/photo/2010/12/10/08/chicken-1140_960_720.jpg"
+              alt="full chicken"
+            />
+          </li>
+          <li>
+            <img
+              decoding="auto"
+              width="150"
+              height="150"
+              src="https://cdn.pixabay.com/photo/2016/07/10/21/29/cock-1508585_960_720.jpg"
+              alt="live chicken"
+            />
+          </li>
+          <li>
+            <img
+              decoding="auto"
+              width="150"
+              height="150"
+              src="https://cdn.pixabay.com/photo/2014/03/05/01/20/chicken-breast-279848_960_720.jpg"
+              alt="chicken breast"
+            />
+          </li>
+          <li>
+            <img
+              decoding="auto"
+              width="150"
+              height="150"
+              src="https://cdn.pixabay.com/photo/2014/04/05/11/38/food-316412_960_720.jpg"
+              alt="chicken eggs"
+            />
+          </li>
+        </ul>
+      </section>
+    </div>
+    <h2>
+      This company is fast in shipping, easy to order from and a delight to work
+      with. The product is excellent. I have mostly disabled adults working in
+      the shop so it's important for us to have different colors for different
+      sizes so they can recognize what cup to grab for the order they are
+      filling. Love the options. Pricing is also great. Thanx again.
+    </h2>
+    <div>
+      <button>
+        sign up for our produt by clicking this button here</button>
+      </button>
+    </div>
+  <p>
+    Copyright © 2023 Adonai Farms
+  </p>
   
   </body>
 </html>
