--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <header>
 
 
+
+  <path id="curve" d="M73.2,148.6c4-6.1,65.5-96.8,178.6-95.6c111.3,1.2,170.8,90.3,175.1,97" />
+  <text width="500">
+    <textPath class="logo-title" xlink:href="#curve">
+      ADONAI-Farms
+  </text>
   <div class="container">
     <div id="head-box">
       <div id="header">
@@ -42,58 +48,78 @@
 
     <div class="container">
       <div class="image">
-        <img decoding="auto" width="560" height="250"
+        <img decoding="auto" width="560" height="350"
           src="https://cdn.pixabay.com/photo/2017/08/26/19/29/chickens-2684029_960_720.jpg">
       </div>
       <div class="text">
         <p>Both ruminants and non-ruminants are reared in Ghana. Ruminants usually reared in Ghana are cattle, goats and
           sheep, while the non-ruminants reared are pigs and poultry (domestic fowl, guinea fowl and ducks)..</p>
+
+        <p><a class="first-link" href="#">Sign Up</a></p>
       </div>
 
-     </div>
+    </div>
 
-
+    <h2 class="product-farm">PRODUCTS FROM THE FARM</h2>
 
     </div>
     <p>
     <ul>
+      <div class="image-set">
+        <img decoding="auto" width="150" height="150"
+          src="https://cdn.pixabay.com/photo/2010/12/10/08/chicken-1140_960_720.jpg" alt="whole chicken" />
 
+
+        <img decoding="auto" width="150" height="150"
+          src="https://cdn.pixabay.com/photo/2016/07/10/21/29/cock-1508585_960_720.jpg" alt="live chicken" />
+
+
+        <img decoding="auto" width="150" height="150"
+          src="https://cdn.pixabay.com/photo/2014/03/05/01/20/chicken-breast-279848_960_720.jpg" alt="chicken breast" />
+
+        <img decoding="auto" width="150" height="150"
+          src="https://cdn.pixabay.com/photo/2014/04/05/11/38/food-316412_960_720.jpg" alt="chicken eggs" />
       </div>
-      <img decoding="auto" width="150" height="150"
-        src="https://cdn.pixabay.com/photo/2010/12/10/08/chicken-1140_960_720.jpg" alt="full chicken" />
 
+      <ul class="list-name">
+        <li> Frozen whole Chicken</li>
+        <li> live Chicken</li>
+        <li>chicken Breast</li>
+        <li> Healthy Eggs</li>
+      </ul>
 
-      <img decoding="auto" width="150" height="150"
-        src="https://cdn.pixabay.com/photo/2016/07/10/21/29/cock-1508585_960_720.jpg" alt="live chicken" />
-
-
-      <img decoding="auto" width="150" height="150"
-        src="https://cdn.pixabay.com/photo/2014/03/05/01/20/chicken-breast-279848_960_720.jpg" alt="chicken breast" />
-
-      <img decoding="auto" width="150" height="150"
-        src="https://cdn.pixabay.com/photo/2014/04/05/11/38/food-316412_960_720.jpg" alt="chicken eggs" />
     </ul>
     <p>
 
 
     <div>
 
-      <div>
+      <div class="quote">
         <p>This company is fast in shipping, easy to order from and a delight to work
           with. The product is excellent. I have mostly disabled adults working in
           the shop so it's important for us to have different colors for different
           sizes so they can recognize what cup to grab for the order they are
           filling. Love the options. Pricing is also great. Thanx again.
         </p>
+      </div>
+
+      <div class="quote-name">
         <p> -max ehrmann</p>
       </div>
+
+    </div>
     </div>
 
-    <button>
-      sign up for our produt by clicking this button here</button>
-    </button>
+    <div class="signup">
+      <button class="item">
+        Sign up for our produt by clicking this button here</button>
 
-    <p>
+      <a class="link2" href="#">Sign Up</a>
+      </button>
+    </div>
+
+
+    <p class="Copyright">
       Copyright © 2023 Adonai Farms
     </p>
 
